[package]
name = "async_until"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
features = ["std"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
std = []

[dependencies]
pin-project-lite = "0.2"

[dev-dependencies]
async-std = "1.12.0"
bytes = "1.7.1"
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["client", "http1"] }
